--- a/home/templates/home/about_project.html
+++ b/home/templates/home/about_project.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'home/base.html' %}
+
+{% block content %}
     <h1>This is a project made to learn Django!</h1>
-    
-    <a href='/'>Back home</a>
-</body>
-</html>
+    <p>Today's date is {{ today_date }}</p>
+{% endblock %}
