Create a find_me page
* uses geocoder

--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -2,5 +2,6 @@
     <ul>
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'about_project' %}">About</a></li>
+        <li><a href="{% url 'find_me' %}">Find me</a></li>
     </ul>
 </navbar>
